# ShareDemo

./: README.md  XD_GS_SOC_Tester.xml  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/xdynamics/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xdynamics/share/: App.java  ConnectorActivity.java  ConnectorActivityFragment.java  MainActivity.java  ShareConfig.java  WebViewActivity.java
app/src/main/java/com/xdynamics/share/twitter/: MyResultReceiver.java
app/src/main/java/com/xdynamics/share/webview/: ShareJsInterface.java  ShareWebChromeClient.java  ShareWebViewClient.java  ShareWebViewSetting.java
app/src/main/java/org/oz/utils/: Ts.java
app/src/main/res/layout/: activity_connector.xml  activity_main.xml  content_connector.xml  fragment_connector.xml
app/src/main/res/menu/: menu_connector.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xdynamics/: ExampleUnitTest.java
connector/: build.gradle
connector/src/androidTest/java/com/xdynamics/connector/: ExampleInstrumentedTest.java
connector/src/main/: AndroidManifest.xml
connector/src/main/cpp/: CMakeLists.txt  CRC.h  Crc32.h  cmd_server.cpp  crcutils.cpp  et_server.cpp  mainer.cpp
connector/src/main/cpp/EventBus/: CMakeLists.txt
connector/src/main/cpp/EventBus/include/eventbus/: AsyncEventBus.h
connector/src/main/cpp/EventBus/src/eventbus/: AsyncEventBus.cpp
connector/src/main/cpp/base/: Destroyable.h
connector/src/main/cpp/crc/: CMakeLists.txt
connector/src/main/cpp/net/: CMakeLists.txt  ETServer.cpp  ETServer.h  epoll_op_class.cpp  epoll_op_class.h  epoll_opt_if.h  event_callback.h  event_handle.cpp  event_handle.h  server.cpp  server.h
connector/src/main/java/com/xdynamics/connector/: CMDServerNative.java  ConnectorServices.java  ETServerNative.java
connector/src/main/java/com/xdynamics/connector/base/: Destroyable.java
connector/src/main/java/com/xdynamics/connector/utils/: CRCUtils.java
connector/src/test/java/com/xdynamics/connector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
share/: Share.md  build.gradle
share/src/androidTest/java/me/oz/demo/share/: ExampleInstrumentedTest.java
share/src/main/: AndroidManifest.xml
share/src/main/java/com/xdynamics/share/: Constants.java  Destroyable.java  FaceBookShare2.java  FacebookShare.java  InstagramShare.java  Platform.java  Result.java  ShareCallback.java  ShareContent.java  ShareException.java  ShareUtils.java  SystemShare.java  TwitterShare.java  YouToShare.java
share/src/main/java/com/xdynamics/share/bean/: ContentWrapper.java  InstagramContentWrapper.java  ShareContent.java  YouTubeContentWrapper.java
share/src/main/java/com/xdynamics/share/oauth2/: ActivityResultCallback.java  OAuth2Facebook.java  OAuth2able.java
share/src/main/java/com/xdynamics/share/platform/: FaceBook.java  InitAble.java
share/src/main/java/com/xdynamics/share/provider/: GenericFileProvider.java
share/src/main/java/com/xdynamics/share/services/: NotificationCollectorService.java  ShareNotificationHandle.java  TwitterShareNotificationHandle.java
share/src/main/java/com/xdynamics/share/utils/: MediaStoreUtils.java
share/src/main/res/anim/: dialog_share_in_anim.xml
share/src/main/res/layout/: share_dialog.xml
share/src/main/res/values/: strings.xml  styles.xml
share/src/main/res/xml/: provider_paths.xml
share/src/test/java/me/oz/demo/share/: ExampleUnitTest.java
